# paper-shell

./: .gitignore  AI_FEATURE.md  Cargo.toml  InfoAdditions.plist  PRODUCT.md  README.md
assets/: app-icon.icns
examples/: config_demo.rs
src/: app.rs  backend.rs  config.rs  constant.rs  file.rs  lib.rs  macos_handler.rs  main.rs  messages.rs  open_with.rs  process_env.rs  saver.rs  sidebar_backend.rs  style.rs  time_backend.rs
src/backend/: ai_backend.rs  ai_panel_backend.rs  editor_backend.rs  mod.rs
src/plugin/: external.rs  mod.rs
src/plugin/builtin/: github_publish.rs  mod.rs  print.rs
src/ui/: ai_panel.rs  editor.rs  font.rs  history.rs  mod.rs  plugins.rs  settings.rs  sidebar.rs  title_bar.rs  viewport.rs
src/ui/history/: diff.rs  mod.rs  stats.rs  types.rs  ui.rs
