[package]
name = "paper-shell"
version = "0.1.0"
edition = "2024"
description = "A simple, concise and informative text editor for everyday writing."

[package.metadata.bundle]
name = "Paper Shell"
identifier = "paper.shell.app"
category = "Productivity"
copyright = "© 2025 RetricSu"
short_description = "A writing editor"
long_description = """
A simple, concise and informative text editor for everyday writing.
"""

[lib]
name = "paper_shell"
path = "src/lib.rs"

[dependencies]
egui = "0.33.2"
eframe = "0.33.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
font-kit = "0.14.3"
rfd = "0.15"
chrono = { version = "0.4", features = ["serde"] }
confy = "0.6"
directories = "5.0"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
uuid = { version = "1.0", features = ["v4"] }
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
xattr = "1.0"
